tests/extensions/imports/valid/importSameDirectory.wacc
# Output: 
# 42

import "samelib.wacc";
begin
    int x = call samelib::f();
    println x
end