tests/extensions/imports/semanticErr/libraryNotImported.wacc
begin
    int x = call lib::x();
    print x
end